Tag navigation UIX fixes
- Updated edit button style to make it more visible
- Increased the size of the tagnav dropdown to full width of screen.
- Added min-width to tag group so prevent them from getting too small
- Added a max-width to tag group to prevent them from getting too big
- Modified the color of the show menu (hamburger) icon to be visible on
light background
- Added app brand (title) component to header of vertical tag nav
- Centered edit button in vertical tag nav
- Fixed "close tag nav on click of link" action to no close if tag nav
group is opened. Fixed it so it will close when sub items are clicked.

--- a/imports/plugins/included/default-theme/client/styles/tagGroup.less
+++ b/imports/plugins/included/default-theme/client/styles/tagGroup.less
@@ -1,8 +1,14 @@
 
 .rui.grouptag {
   flex: 1 1 auto;
-  max-width: 20%;
+  // max-width: 20%;
+  max-width: 200px;
+  min-width: 150px;
   padding: 10px;
+
+  @media screen and (max-width: @screen-xs-max) {
+    max-width: 100%;
+  }
 }
 
 .rui.tagnav.vertical .rui.grouptag {
