--- a/imports/plugins/included/default-theme/client/styles/tagNav.less
+++ b/imports/plugins/included/default-theme/client/styles/tagNav.less
@@ -78,7 +78,6 @@
   .align-items(center);
 
   background-color: @navbar-inverse-bg;
-  position: relative;
   text-transform: uppercase;
   height: @navbar-height;
 }
@@ -300,7 +299,6 @@
 .rui.tagnav .navbar-item .dropdown-container {
   display: none;
   color: @text-color;
-  box-shadow: 0 0 20px rgba(0,0,0,.1);
 }
 
 .rui.tagnav .navbar-item .dropdown-container a {
@@ -330,7 +328,6 @@
   margin: 0;
 
   background-color: @white;
-  border: 1px solid @border-color;
 }
 
 .rui.tagnav.vertical .navbar-item.selected .dropdown-container,
